# meeting-assistant

./: .gitignore  LICENSE  README.md  config.example.json  pyproject.toml
app/: __init__.py  artifacts.py  config.py  events.py  main.py  models.py  overlay.py  remote_server.py  security.py  server.py  sessions.py  text_normalizer.py
app/asr/: base.py  local_faster.py  mlx_whisper.py  paraformer.py  qwen.py  remote.py
app/audio/: __init__.py  capture.py  devices.py  importer.py  recorder.py  types.py
app/pipeline/: __init__.py  meeting.py  postprocess.py  speaker.py
app/static/: app.js  index.html  style.css
app/translation/: __init__.py  base.py  llm.py
docs/: ARCHITECTURE.md  MODEL_POLICY.md  PRODUCT_MAP.md
scripts/: open_web_ui.sh
